[gd_scene load_steps=5 format=3 uid="uid://bowhgj32i7bue"]

[ext_resource type="Script" uid="uid://bo63nhi42df3u" path="res://addons/monologue/layout/monologue_character_displayer/monologue_character_displayer.gd" id="1_65jrr"]

[sub_resource type="ViewportTexture" id="ViewportTexture_drs25"]
viewport_path = NodePath("LeftSubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_bxela"]
viewport_path = NodePath("CenterSubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_6ps1q"]
viewport_path = NodePath("RightSubViewport")

[node name="MonologueCharacterDisplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_65jrr")

[node name="TextureLeft" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 1.0
anchor_right = 0.043
anchor_bottom = 1.0
offset_left = 0.463997
offset_right = 300.464
grow_vertical = 0
texture = SubResource("ViewportTexture_drs25")
expand_mode = 5
stretch_mode = 4

[node name="TextureCenter" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("ViewportTexture_bxela")
expand_mode = 5
stretch_mode = 5

[node name="TextureRight" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.957
anchor_top = 1.0
anchor_right = 0.957
anchor_bottom = 1.0
offset_left = -300.464
offset_right = -0.463989
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("ViewportTexture_6ps1q")
expand_mode = 5
stretch_mode = 4

[node name="LeftSubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Node2D" type="Node2D" parent="LeftSubViewport"]

[node name="LeftAnimatedSprite2D" type="AnimatedSprite2D" parent="LeftSubViewport/Node2D"]
unique_name_in_owner = true
centered = false

[node name="CenterSubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Node2D" type="Node2D" parent="CenterSubViewport"]

[node name="CenterAnimatedSprite2D" type="AnimatedSprite2D" parent="CenterSubViewport/Node2D"]
unique_name_in_owner = true
centered = false

[node name="RightSubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Node2D" type="Node2D" parent="RightSubViewport"]

[node name="RightAnimatedSprite2D" type="AnimatedSprite2D" parent="RightSubViewport/Node2D"]
unique_name_in_owner = true
centered = false
